--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>La Transat - Bar Resto au Havre</title>
+  <title>Le Transat - Bar Resto au Havre</title>
   <link rel="icon" href="le_transat_logo.webp" type="image/webp" />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -44,7 +44,7 @@
   <!-- Hero Section -->
   <section id="hero" class="h-[70vh] bg-cover bg-center flex items-center justify-center text-white text-center" style="background-image: url('hero.jpg');">
     <div class="bg-black/50 p-8 rounded-xl">
-      <h1 class="text-4xl md:text-5xl font-bold mb-4">Bienvenue à La Transat</h1>
+      <h1 class="text-4xl md:text-5xl font-bold mb-4">Bienvenue à Le Transat</h1>
       <p class="text-lg md:text-xl">Terrasse face au port du Havre, cuisine fraîche & ambiance conviviale.</p>
     </div>
   </section>
