--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
   <header class="sticky top-0 bg-white/80 backdrop-blur shadow z-40">
     <div class="max-w-6xl mx-auto flex items-center justify-between p-4">
       <div class="flex items-center space-x-2">
-        <img src="le_transat_logo.webp" alt="Logo La Transat" class="w-10 h-10 rounded-full" />
-        <span class="text-xl font-bold text-blue-900">La Transat</span>
+        <img src="le_transat_logo.webp" alt="Logo Le Transat" class="w-10 h-10 rounded-full" />
+        <span class="text-xl font-bold text-blue-900">Le Transat</span>
       </div>
       <nav class="space-x-4 text-blue-800 font-medium">
         <a href="#hero" class="hover:underline">Accueil</a>
@@ -53,7 +53,7 @@
   <main class="max-w-4xl mx-auto py-12 px-4 space-y-12">
     <section>
       <h2 class="text-3xl font-semibold text-blue-900 mb-6">Nos Boissons</h2>
-      <img src="boisson.webp" class="rounded-lg shadow w-full mb-4" alt="Boissons La Transat" />
+      <img src="boisson.webp" class="rounded-lg shadow w-full mb-4" alt="Boissons Le Transat" />
       <p>Aperol Spritz, cafés, thés, cocktails, softs et vins soigneusement sélectionnés.</p>
     </section>
 
@@ -76,7 +76,7 @@
     <div class="w-full max-w-3xl mx-auto mb-6">
       <iframe class="w-full h-64 rounded-lg" src="https://www.google.com/maps?q=la+transat+le+havre&output=embed" loading="lazy"></iframe>
     </div>
-    <p>&copy; 2025 La Transat – Tous droits réservés</p>
+    <p>&copy; 2025 Le Transat – Tous droits réservés</p>
   </footer>
 
   <!-- Google Translate Script -->
