--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Le Transat - Bar Resto au Havre</title>
-  <link rel="icon" href="le_transat_logo.webp" type="image/webp" />
+  <link rel="icon" href="images/le_transat_logo.webp" type="image/webp" />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @keyframes gradientFlow {
@@ -31,7 +31,7 @@
   <header class="sticky top-0 bg-white/80 backdrop-blur shadow z-40">
     <div class="max-w-6xl mx-auto flex items-center justify-between p-4">
       <div class="flex items-center space-x-2">
-        <img src="le_transat_logo.webp" alt="Logo Le Transat" class="w-10 h-10 rounded-full" />
+        <img src="images/le_transat_logo.webp" alt="Logo Le Transat" class="w-10 h-10 rounded-full" />
         <span class="text-xl font-bold text-blue-900">Le Transat</span>
       </div>
       <nav class="space-x-4 text-blue-800 font-medium">
@@ -42,7 +42,7 @@
   </header>
 
   <!-- Hero Section -->
-  <section id="hero" class="h-[70vh] bg-cover bg-center flex items-center justify-center text-white text-center" style="background-image: url('hero.jpg');">
+  <section id="hero" class="h-[70vh] bg-cover bg-center flex items-center justify-center text-white text-center" style="background-image: url('images/hero.jpg');">
     <div class="bg-black/50 p-8 rounded-xl">
       <h1 class="text-4xl md:text-5xl font-bold mb-4">Bienvenue à Le Transat</h1>
       <p class="text-lg md:text-xl">Terrasse face au port du Havre, cuisine fraîche & ambiance conviviale.</p>
@@ -53,19 +53,19 @@
   <main class="max-w-4xl mx-auto py-12 px-4 space-y-12">
     <section>
       <h2 class="text-3xl font-semibold text-blue-900 mb-6">Nos Boissons</h2>
-      <img src="boisson.webp" class="rounded-lg shadow w-full mb-4" alt="Boissons Le Transat" />
+      <img src="images/boisson.webp" class="rounded-lg shadow w-full mb-4" alt="Boissons Le Transat" />
       <p>Aperol Spritz, cafés, thés, cocktails, softs et vins soigneusement sélectionnés.</p>
     </section>
 
     <section>
       <h2 class="text-3xl font-semibold text-blue-900 mb-6">Nos Desserts</h2>
-      <img src="dessert.webp" class="rounded-lg shadow w-full mb-4" alt="Desserts" />
+      <img src="images/dessert.webp" class="rounded-lg shadow w-full mb-4" alt="Desserts" />
       <p>Tiramisu maison, moelleux chocolat, panna cotta et douceurs de saison.</p>
     </section>
 
     <section>
       <h2 class="text-3xl font-semibold text-blue-900 mb-6">Planche Apéro</h2>
-      <img src="plat.webp" class="rounded-lg shadow w-full mb-4" alt="Planches apéritives" />
+      <img src="images/plat.webp" class="rounded-lg shadow w-full mb-4" alt="Planches apéritives" />
       <p>À partager : fromages affinés, charcuterie locale et petits plaisirs salés.</p>
     </section>
   </main>
